Fix hamburger menu visibility and navigation styles

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -17,7 +17,8 @@
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
 }
 
-.hamburger-menu .bar {
+.hamburger-menu span {
+    display: block;
     width: 25px;
     height: 3px;
     background: #333;
@@ -26,15 +27,15 @@
     border-radius: 3px;
 }
 
-.hamburger-menu.active .bar:nth-child(1) {
+.hamburger-menu.active span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
 }
 
-.hamburger-menu.active .bar:nth-child(2) {
+.hamburger-menu.active span:nth-child(2) {
     opacity: 0;
 }
 
-.hamburger-menu.active .bar:nth-child(3) {
+.hamburger-menu.active span:nth-child(3) {
     transform: rotate(-45deg) translate(7px, -6px);
 }
 
